Make it possible to customise thhe subject of ‘post_navigation’ and fix a layout issue

--- a/assets/sass/components/_post-navigation.scss
+++ b/assets/sass/components/_post-navigation.scss
@@ -8,6 +8,13 @@
   }
 }
 
+.PostNavigation--end {
+  @include media('>tablet') {
+    justify-content: flex-end;
+  }
+}
+
+
 .PostNavigation__item {
   position: relative;
   line-height: 1.1;
